--- a/Step7.ipynb
+++ b/Step7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,126 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run 'Step1.ipynb'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run 'Step4.ipynb'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run 'Step6.ipynb'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Distance Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distances from node 5: {'5': 0, '13': 1, '3': 2, '15': 3, '7': 4, '18': 5, '8': -1, '21': -1, '14': -1, '9': -1, '19': -1, '4': -1, '10': -1, '16': -1, '17': -1, '12': -1, '22': -1, '23': -1, '24': -1, '6': -1, '1': -1, '2': -1, '20': -1, '11': -1}\n",
+      "Distances from node 13: {'13': 0, '3': 1, '15': 2, '7': 3, '18': 4, '8': -1, '21': -1, '19': -1, '10': -1, '4': -1, '23': -1, '11': -1, '6': -1, '1': -1, '5': -1, '14': -1, '20': -1, '9': -1, '16': -1, '17': -1, '12': -1, '22': -1, '2': -1, '24': -1}\n",
+      "Distances from node 3: {'3': 0, '15': 1, '7': 2, '18': 3, '8': -1, '21': -1, '19': -1, '10': -1, '4': -1, '23': -1, '11': -1, '6': -1, '1': -1, '5': -1, '14': -1, '20': -1, '9': -1, '16': -1, '17': -1, '12': -1, '22': -1, '13': -1, '2': -1, '24': -1}\n",
+      "Distances from node 6: {'6': 0, '14': 1, '21': 2, '19': 3, '11': 3, '20': 4, '8': 4, '9': 4, '12': 5, '1': 5, '23': 6, '3': -1, '5': -1, '15': -1, '4': -1, '10': -1, '16': -1, '17': -1, '22': -1, '7': -1, '13': -1, '2': -1, '18': -1, '24': -1}\n",
+      "Distances from node 14: {'14': 0, '21': 1, '19': 2, '11': 2, '20': 3, '8': 3, '9': 3, '12': 4, '6': 4, '1': 4, '23': 5, '3': -1, '5': -1, '15': -1, '4': -1, '10': -1, '16': -1, '17': -1, '22': -1, '7': -1, '13': -1, '2': -1, '18': -1, '24': -1}\n",
+      "Distances from node 15: {'15': 0, '7': 1, '18': 2, '3': 3, '8': -1, '21': -1, '19': -1, '10': -1, '4': -1, '23': -1, '11': -1, '6': -1, '1': -1, '5': -1, '14': -1, '20': -1, '9': -1, '16': -1, '17': -1, '12': -1, '22': -1, '13': -1, '2': -1, '24': -1}\n",
+      "Distances from node 7: {'7': 0, '18': 1, '3': 2, '15': 3, '8': -1, '21': -1, '19': -1, '10': -1, '4': -1, '23': -1, '11': -1, '6': -1, '1': -1, '5': -1, '14': -1, '20': -1, '9': -1, '16': -1, '17': -1, '12': -1, '22': -1, '13': -1, '2': -1, '24': -1}\n",
+      "Distances from node 11: {'11': 0, '8': 1, '9': 1, '1': 2, '23': 3, '12': 4, '3': -1, '5': -1, '15': -1, '21': -1, '14': -1, '20': -1, '19': -1, '10': -1, '4': -1, '16': -1, '17': -1, '22': -1, '7': -1, '6': -1, '13': -1, '2': -1, '18': -1, '24': -1}\n",
+      "Distances from node 8: {'8': 0, '3': -1, '15': -1, '21': -1, '19': -1, '10': -1, '4': -1, '23': -1, '11': -1, '6': -1, '1': -1, '5': -1, '14': -1, '20': -1, '9': -1, '16': -1, '17': -1, '12': -1, '22': -1, '7': -1, '13': -1, '2': -1, '18': -1, '24': -1}\n",
+      "Distances from node 9: {'9': 0, '1': 1, '23': 2, '12': 3, '8': 4, '3': -1, '15': -1, '21': -1, '19': -1, '10': -1, '4': -1, '11': -1, '6': -1, '5': -1, '14': -1, '20': -1, '16': -1, '17': -1, '22': -1, '7': -1, '13': -1, '2': -1, '18': -1, '24': -1}\n",
+      "Distances from node 16: {'16': 0, '10': 1, '2': 1, '17': 2, '3': 3, '15': 4, '7': 5, '18': 6, '5': -1, '8': -1, '21': -1, '14': -1, '9': -1, '19': -1, '4': -1, '12': -1, '22': -1, '24': -1, '6': -1, '20': -1, '23': -1, '1': -1, '13': -1, '11': -1}\n",
+      "Distances from node 10: {'10': 0, '3': -1, '8': -1, '15': -1, '21': -1, '19': -1, '4': -1, '23': -1, '11': -1, '6': -1, '1': -1, '5': -1, '14': -1, '20': -1, '9': -1, '16': -1, '17': -1, '12': -1, '22': -1, '7': -1, '13': -1, '2': -1, '18': -1, '24': -1}\n",
+      "Distances from node 4: {'4': 0, '9': 1, '1': 2, '23': 3, '12': 4, '8': 5, '3': -1, '5': -1, '15': -1, '21': -1, '14': -1, '24': -1, '19': -1, '10': -1, '16': -1, '17': -1, '22': -1, '7': -1, '6': -1, '13': -1, '2': -1, '18': -1, '20': -1, '11': -1}\n",
+      "Distances from node 2: {'2': 0, '17': 1, '16': 2, '3': 2, '10': 3, '15': 3, '7': 4, '18': 5, '5': -1, '8': -1, '21': -1, '14': -1, '9': -1, '19': -1, '4': -1, '12': -1, '22': -1, '24': -1, '6': -1, '20': -1, '23': -1, '1': -1, '13': -1, '11': -1}\n",
+      "Distances from node 18: {'18': 0, '3': 1, '15': 2, '7': 3, '8': -1, '21': -1, '19': -1, '10': -1, '4': -1, '23': -1, '11': -1, '6': -1, '1': -1, '5': -1, '14': -1, '20': -1, '9': -1, '16': -1, '17': -1, '12': -1, '22': -1, '13': -1, '2': -1, '24': -1}\n",
+      "Distances from node 17: {'17': 0, '16': 1, '3': 1, '10': 2, '2': 2, '15': 2, '7': 3, '18': 4, '5': -1, '8': -1, '21': -1, '14': -1, '9': -1, '19': -1, '4': -1, '12': -1, '22': -1, '24': -1, '6': -1, '20': -1, '23': -1, '1': -1, '13': -1, '11': -1}\n",
+      "Distances from node 19: {'19': 0, '20': 1, '12': 2, '6': 2, '8': 3, '14': 3, '21': 4, '11': 5, '9': 6, '1': 7, '23': 8, '3': -1, '5': -1, '15': -1, '4': -1, '10': -1, '16': -1, '17': -1, '22': -1, '7': -1, '13': -1, '2': -1, '18': -1, '24': -1}\n",
+      "Distances from node 20: {'20': 0, '12': 1, '6': 1, '8': 2, '14': 2, '21': 3, '19': 4, '11': 4, '9': 5, '1': 6, '23': 7, '3': -1, '5': -1, '15': -1, '4': -1, '10': -1, '16': -1, '17': -1, '22': -1, '7': -1, '13': -1, '2': -1, '18': -1, '24': -1}\n",
+      "Distances from node 12: {'12': 0, '8': 1, '3': -1, '15': -1, '21': -1, '19': -1, '10': -1, '4': -1, '23': -1, '11': -1, '6': -1, '1': -1, '5': -1, '14': -1, '20': -1, '9': -1, '16': -1, '17': -1, '22': -1, '7': -1, '13': -1, '2': -1, '18': -1, '24': -1}\n",
+      "Distances from node 21: {'21': 0, '19': 1, '11': 1, '20': 2, '8': 2, '9': 2, '12': 3, '6': 3, '1': 3, '14': 4, '23': 4, '3': -1, '5': -1, '15': -1, '4': -1, '10': -1, '16': -1, '17': -1, '22': -1, '7': -1, '13': -1, '2': -1, '18': -1, '24': -1}\n",
+      "Distances from node 22: {'22': 0, '3': 1, '15': 2, '7': 3, '18': 4, '8': -1, '21': -1, '19': -1, '10': -1, '4': -1, '23': -1, '11': -1, '6': -1, '1': -1, '5': -1, '14': -1, '20': -1, '9': -1, '16': -1, '17': -1, '12': -1, '13': -1, '2': -1, '24': -1}\n",
+      "Distances from node 1: {'1': 0, '23': 1, '12': 2, '8': 3, '3': -1, '15': -1, '21': -1, '19': -1, '10': -1, '4': -1, '11': -1, '6': -1, '5': -1, '14': -1, '20': -1, '9': -1, '16': -1, '17': -1, '22': -1, '7': -1, '13': -1, '2': -1, '18': -1, '24': -1}\n",
+      "Distances from node 23: {'23': 0, '12': 1, '8': 2, '3': -1, '15': -1, '21': -1, '19': -1, '10': -1, '4': -1, '11': -1, '6': -1, '1': -1, '5': -1, '14': -1, '20': -1, '9': -1, '16': -1, '17': -1, '22': -1, '7': -1, '13': -1, '2': -1, '18': -1, '24': -1}\n",
+      "Distances from node 24: {'24': 0, '16': 1, '10': 2, '2': 2, '17': 3, '3': 4, '15': 5, '7': 6, '18': 7, '5': -1, '8': -1, '21': -1, '14': -1, '9': -1, '19': -1, '4': -1, '12': -1, '22': -1, '6': -1, '20': -1, '13': -1, '23': -1, '1': -1, '11': -1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def adjacent(file,dir = True):\n",
+    "    nodes,edges = get_data(file)[2],get_data(file)[3]\n",
+    "    adj = {node:[child for child in child_nodes(edges,node)[1]] for node in nodes}\n",
+    "\n",
+    "    if dir == False:\n",
+    "        for node in nodes:\n",
+    "            parents = parent_nodes(edges,node)[1]\n",
+    "            for parent in parents:\n",
+    "                adj[node].append(parent)\n",
+    "    return adj\n",
+    "\n",
+    "#print(adjacent('Datasets/smallnet.dot'))\n",
+    "\n",
+    "def bfs_distance(graph, start):\n",
+    "    visited = set()\n",
+    "    distances = {start: 0}\n",
+    "    queue = [start]\n",
+    "\n",
+    "    while queue:\n",
+    "        current_node = queue.pop(0)\n",
+    "        visited.add(current_node)\n",
+    "\n",
+    "        for neighbor in graph[current_node]:\n",
+    "            if neighbor not in visited:\n",
+    "                distances[neighbor] = distances[current_node] + 1\n",
+    "                queue.append(neighbor)\n",
+    "\n",
+    "    return distances\n",
+    "\n",
+    "\n",
+    "def compute_distance_matrix(file,dir = True):\n",
+    "    graph = adjacent(file,dir)\n",
+    "    nodes = get_data(file)[2]\n",
+    "    distance_matrix = {node:bfs_distance(graph, node) for node in graph}\n",
+    "\n",
+    "    for node1 in distance_matrix:\n",
+    "        left_nodes = set(nodes)-set(distance_matrix[node1].keys())\n",
+    "        for node2 in left_nodes:\n",
+    "            distance_matrix[node1][node2] = -1\n",
+    "\n",
+    "    return distance_matrix\n",
+    "\n",
+    "\n",
+    "distance_matrix = compute_distance_matrix('Datasets/smallnet.dot')\n",
+    "#print(distance_matrix)\n",
+    "for node in distance_matrix:\n",
+    "    print(f\"Distances from node {node}: {distance_matrix[node]}\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,9 +152,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "run 'Step6.ipynb'"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3186,7 +3304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
