--- a/Step6.ipynb
+++ b/Step6.ipynb
@@ -53,6 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#get data from step1 is also doing this\n",
     "def get_data_league(dot_file_path):\n",
     "    '''Returns the nodes, edges (both in pydot format), a list with all the nodes and another with all the edges, and also a dic with (edge):weight\n",
     "    '''\n",
@@ -75,11 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# nodes,edges,node_list,edge_list,weights = get_data_league('Datasets/LeagueNetwork.dot')\n",
+    "nodes,edges,node_list,edge_list,weights = get_data_league('Datasets/LeagueNetwork.dot')\n",
     "\n",
     "# print(\"nodes\", nodes)\n",
     "# print(\"edges\", nodes)\n",
@@ -97,9 +98,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.          1.          0.33333333  0.5         0.5         1.\n",
+      "   0.5         0.5        -0.5         0.5        -1.         -0.5\n",
+      "   0.5                inf         inf -0.5       ]\n",
+      " [ 1.          1.                 inf -1.         -0.5         0.5\n",
+      "  -1.         -1.                 inf  1.          0.5                inf\n",
+      "   0.5         1.         -1.          1.        ]\n",
+      " [ 0.33333333         inf  1.          0.33333333  0.5         1.\n",
+      "   1.          1.          1.          1.          0.33333333 -1.\n",
+      "          inf  0.33333333  1.          0.5       ]\n",
+      " [ 0.5        -1.          0.33333333  1.          0.14285714  0.5\n",
+      "   0.25        0.5         0.33333333 -0.5         0.5         1.\n",
+      "   1.         -0.5        -0.33333333         inf]\n",
+      " [ 0.5        -0.5         0.5         0.14285714  1.          1.\n",
+      "  -1.          0.5         1.                 inf         inf         inf\n",
+      "          inf  0.25       -0.33333333  0.5       ]\n",
+      " [ 1.          0.5         1.          0.5         1.          1.\n",
+      "          inf  0.5         0.25        1.                 inf -0.33333333\n",
+      "  -1.         -1.                 inf -1.        ]\n",
+      " [ 0.5        -1.          1.          0.25       -1.                 inf\n",
+      "   1.          1.         -0.5         0.5         1.                 inf\n",
+      "   1.                 inf  0.25        0.5       ]\n",
+      " [ 0.5        -1.          1.          0.5         0.5         0.5\n",
+      "   1.          1.          1.          1.          0.5                inf\n",
+      "          inf  1.          1.          1.        ]\n",
+      " [-0.5                inf  1.          0.33333333  1.          0.25\n",
+      "  -0.5         1.          1.                 inf  0.5         0.5\n",
+      "          inf  1.          1.          1.        ]\n",
+      " [ 0.5         1.          1.         -0.5                inf  1.\n",
+      "   0.5         1.                 inf  1.          0.25        0.5\n",
+      "   1.          0.5        -1.          1.        ]\n",
+      " [-1.          0.5         0.33333333  0.5                inf         inf\n",
+      "   1.          0.5         0.5         0.25        1.         -0.5\n",
+      "   1.          0.5                inf -1.        ]\n",
+      " [-0.5                inf -1.          1.                 inf -0.33333333\n",
+      "          inf         inf  0.5         0.5        -0.5         1.\n",
+      "   1.          0.5        -1.         -0.5       ]\n",
+      " [ 0.5         0.5                inf  1.                 inf -1.\n",
+      "   1.                 inf         inf  1.          1.          1.\n",
+      "   1.          0.25        0.5        -1.        ]\n",
+      " [        inf  1.          0.33333333 -0.5         0.25       -1.\n",
+      "          inf  1.          1.          0.5         0.5         0.5\n",
+      "   0.25        1.          0.5         0.33333333]\n",
+      " [        inf -1.          1.         -0.33333333 -0.33333333         inf\n",
+      "   0.25        1.          1.         -1.                 inf -1.\n",
+      "   0.5         0.5         1.          1.        ]\n",
+      " [-0.5         1.          0.5                inf  0.5        -1.\n",
+      "   0.5         1.          1.          1.         -1.         -0.5\n",
+      "  -1.          0.33333333  1.          1.        ]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/v9/vw_3jh0926dbbfz0qf1kwbzr0000gn/T/ipykernel_4339/2220236872.py:20: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  similarities[i, j] = 1 / (1 + distances[i, j])\n"
+     ]
+    }
+   ],
    "source": [
     "def compute_similarity_matrix(node_list, edge_list, weights):\n",
     "    edge_weights = {(u, v): weight for (u, v), weight in weights.items()}\n",
@@ -127,8 +191,8 @@
     "\n",
     "    return similarities\n",
     "\n",
-    "# similarity_matrix = compute_similarity_matrix(node_list, edge_list, weights)\n",
-    "\n",
+    "similarity_matrix = compute_similarity_matrix(node_list, edge_list, weights)\n",
+    "print(similarity_matrix)\n",
     "# print(\"Similarity matrix:\")\n",
     "# print(\"\\t\" + \"\\t\".join(node_list))\n",
     "# for i in range(len(node_list)):\n",
