--- a/Step5.ipynb
+++ b/Step5.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,13 +442,13 @@
     "                            direction = end_node_center - start_coord\n",
     "                            direction_normalized = direction / np.linalg.norm(direction)\n",
     "                            end_coord = end_node_center - 0.2 * direction_normalized\n",
-    "                            plt.arrow(*start_coord, *(end_coord - start_coord), head_width=0.06, head_length=0.06, fc='r', ec='r', zorder=1)#arrow\n",
-    "                            plt.plot(curve_points[:-19, 0], curve_points[:-19, 1],color= 'r',zorder = 1)#line\n",
+    "                            plt.arrow(*start_coord, *(end_coord - start_coord), head_width=0.06, head_length=0.06, fc='r', ec='r',alpha=0.2, zorder=1)#arrow\n",
+    "                            plt.plot(curve_points[:-19, 0], curve_points[:-19, 1],color= 'r',alpha = 0.2,zorder = 1)#line\n",
     "                        \n",
     "                        #without bezier curve\n",
     "                        else:\n",
     "                            new_path = np.array(path)\n",
-    "                            plt.plot(new_path[:, 0], new_path[:, 1],'r-',zorder=1)\n",
+    "                            plt.plot(new_path[:, 0], new_path[:, 1],'r-',alpha = 0.2,zorder=1)\n",
     "                \n",
     "                #without bundling\n",
     "                else:\n",
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
