some updates on step3

--- a/Step3.ipynb
+++ b/Step3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +121,13 @@
     "\n",
     "\n",
     "#l_f_v = force_directed_layout('Datasets/LesMiserables.dot', max_ites=1000, plot='Yes',c_spring=6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results"
    ]
   },
   {
