--- a/Step2.ipynb
+++ b/Step2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
     "    edge_list,weigths = get_data(file)[3],get_data(file)[4]\n",
     "\n",
     "    if layout == 'tree_layout':\n",
-    "        node_positions = tree_layout(file)\n",
+    "        node_positions = tree_layout(file)[0]\n",
     "        edges = get_data(file)[1]\n",
     "    if layout == 'tree_layout_improv':\n",
     "        node_positions = tree_layout_improv(file)\n",
@@ -584,12 +584,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Initial Layout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#show_graph('Datasets/LesMiserables.dot','tree_layout')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Improved Initial Layout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#show_graph('Datasets/LesMiserables.dot','tree_layout_improv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## BFS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
