--- a/Step4.ipynb
+++ b/Step4.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def random_plot(file,size=20,plot='Yes'):\n",
+    "def random_plot(file,size=15,plot='Yes'):\n",
     "    nodes,edges = get_data(file)[2],get_data(file)[3]\n",
     "    node_positions = {node:(int(random.uniform(0, size)),int(random.uniform(0, size))) for node in nodes}\n",
     "    \n",
     "    if plot == 'Yes':\n",
-    "        plt.figure(figsize=(size/2, size/2))\n",
+    "        plt.figure(figsize=(size, size))\n",
     "        for node, pos in node_positions.items():\n",
     "            plt.scatter(pos[0], pos[1], color='green', s=200, marker='o', zorder =2)  \n",
     "            plt.text(pos[0], pos[1], str(node), fontsize=10, ha='center', va='center')\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,11 +208,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_no_cycles(file,size=20,plot_original='Yes'):\n",
+    "def plot_no_cycles(file,size=15,plot_original='Yes'):\n",
     "    '''Function that plots the graph inside the .dot file, with default size set to 20, with random nodes positions\n",
     "    and NO cycles, with reversed edges in red. If plot_original='Yes' it also plots the original graph, possibly with\n",
     "    cycles in the strucure.\n",
@@ -220,7 +220,7 @@
     "    edges = get_data(file)[3]\n",
     "    node_positions = random_plot(file,plot=plot_original)\n",
     "    invert = heuristic(file)\n",
-    "    plt.figure(figsize=(size/2, size/2))\n",
+    "    plt.figure(figsize=(size, size))\n",
     "    for node, pos in node_positions.items():\n",
     "        plt.scatter(pos[0], pos[1], color='green', s=200, marker='o', zorder =2)  # Use marker='o' for circle markers\n",
     "        plt.text(pos[0], pos[1], str(node), fontsize=10, ha='center', va='center')\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,11 +412,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_layer_assignment(file, nodes={},size=10,dif_color='red'): \n",
+    "def plot_layer_assignment(file, nodes={},size=15,dif_color='red'): \n",
     "    layers, edges = layer_assignment(file)[0], layer_assignment(file)[1]\n",
     "    inverted = find_inverted(file)\n",
     "    if nodes == {}:\n",
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,15 +642,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_cross_min(file, nodes={}, heur='bary',size=10,dif_color='red'): \n",
+    "def plot_cross_min(file, nodes={}, heur='bary',size=15,dif_color='red'): \n",
     "    layers, edges = layer_assignment(file)[0], layer_assignment(file)[1]\n",
     "    layers = it_cross_min(file, heur)[0]\n",
     "    inverted = find_inverted(file)\n",
-    "    #print('crossings:', it_cross_min(file, heur)[1])\n",
+    "\n",
     "    if nodes == {}:\n",
     "        nodes = {}\n",
     "        for i, layer in enumerate(layers):\n",
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,11 +771,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_node_positioning(file, nodes={}, heur='bary',size=10,dif_color='red'): \n",
+    "def plot_node_positioning(file, nodes={}, heur='bary',size=15,dif_color='red'): \n",
     "    return plot_cross_min(file, nodes=node_positioning(file,heur,step=1), heur=heur,size=size,dif_color=dif_color)"
    ]
   },
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,43 +972,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Layer Assignement\n",
     "#plot_layer_assignment('Datasets/smallnet.dot')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Iterative Cross Minimisation with Barycenter Heuristic\n",
     "#plot_cross_min('Datasets/smallnet.dot',heur='bary')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Iterative Cross Minimisation with Median Heuristic\n",
     "#plot_cross_min('Datasets/smallnet.dot',heur='median')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Node poisitioning with Barycenter heuristic\n",
     "#plot_node_positioning('Datasets/smallnet.dot',heur='bary')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,16 +1021,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Edge drawing with Barycenter heuristic\n",
     "#edge_drawing_plot('Datasets/smallnet.dot',revert=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1035,16 +1040,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Edge drawing with edges reverted  with Barycenter heuristic\n",
     "#edge_drawing_plot('Datasets/smallnet.dot')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,16 +1059,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#FINAL OUTPUT\n",
     "#edge_drawing_plot('Datasets/smallnet.dot',dif_color='blue')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,11 +1092,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# weights = get_data('LeagueNetwork.dot')[-1]\n",
+    "# weights = get_data('Datasets/LeagueNetwork.dot')[-1]\n",
     "\n",
     "# pos_weights = {edge:weight for edge,weight in weights.items() if int(weight)>0}\n",
     "# pos_edges = list(pos_weights.keys())\n",
@@ -1113,7 +1120,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(weights )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print('pos_edges',len(pos_nodes))\n",
+    "# print('zero_edges',len(zero_nodes))\n",
+    "# print('zero_edges',len(zero_nodes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1131,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,12 +1183,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# weights = get_data('LeagueNetwork.dot')[-1]\n",
-    "# unique_weights = sorted(list(set(get_data('LeagueNetwork.dot')[-1].values())))\n",
+    "# weights = get_data('Datasets/LeagueNetwork.dot')[-1]\n",
+    "# unique_weights = sorted(list(set(get_data('Datasets/LeagueNetwork.dot')[-1].values())))\n",
     "# league_files = []\n",
     "# for weight_i in unique_weights:\n",
     "#     weights_i = {edge:weight for edge,weight in weights.items() if int(weight)==weight_i}\n",
