added non tree edges

--- a/Step2.ipynb
+++ b/Step2.ipynb
@@ -574,6 +574,111 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PLOT GRAPH WITH INVALID EDGES\n",
+    "def show_graph_with_invalid_edges(file,layout,tree='BFS', dims=(18,18),start_node=1):\n",
+    "    edge_list,weigths = get_data(file)[3],get_data(file)[4]\n",
+    "    all_edges = get_data(file)[1]\n",
+    "    valid_nodes = []\n",
+    "    if layout == 'tree_layout':\n",
+    "        node_positions = tree_layout(file)\n",
+    "        edges = get_data(file)[1]\n",
+    "    if layout == 'tree_layout_improv':\n",
+    "        node_positions = tree_layout_improv(file)\n",
+    "        edges = get_data(file)[1]\n",
+    "\n",
+    "    if layout == 'layered_ish':\n",
+    "        node_positions = layered_ish(file)\n",
+    "    \n",
+    "    \n",
+    "    if tree == 'BFS' and layout in ['layered_ish','radial']:\n",
+    "        edges_ish = BFS_tree(file)\n",
+    "        edges = []\n",
+    "        for source,l_dest in edges_ish.items():\n",
+    "            for dest in l_dest:\n",
+    "                edges.append((source,dest))\n",
+    "        if layout == 'radial':\n",
+    "            node_positions, l_radius = radial(file,tree_type='BFS')\n",
+    "\n",
+    "    if tree == 'DFS' and layout in ['layered_ish','radial']:\n",
+    "        tree_org = tree_layout_DFS(file)\n",
+    "        edges_ish = tree_org[1]\n",
+    "        node_positions = tree_org[0]\n",
+    "        edges = []\n",
+    "        for source,l_dest in edges_ish.items():\n",
+    "            for dest in l_dest:\n",
+    "                edges.append((source,dest))\n",
+    "        if layout == 'radial':\n",
+    "            node_positions,l_radius = radial(file,tree_type='DFS')\n",
+    "\n",
+    "    plt.figure(figsize=(dims[0], dims[1]))\n",
+    "    w = 1\n",
+    "    for edge in edges:\n",
+    "        if layout not in ['layered_ish','radial']:\n",
+    "            start_node = edge.get_source()\n",
+    "            end_node = edge.get_destination()\n",
+    "            position = str(str(edge.get_attributes())).rfind(':')\n",
+    "            if int(position) != -1:\n",
+    "                w = int(str(edge.get_attributes())[position+3:-2])\n",
+    "                if w != 1:\n",
+    "                    w = w/10\n",
+    "        else:\n",
+    "            start_node = edge[0]\n",
+    "            end_node = edge[1]\n",
+    "            new_edge = (start_node,end_node)\n",
+    "            if new_edge not in edge_list:\n",
+    "                new_edge = (end_node,start_node)\n",
+    "            if weigths !={}:\n",
+    "                w = weigths[new_edge]\n",
+    "                if w != 1:\n",
+    "                    w=w/10\n",
+    "\n",
+    "        start_pos = node_positions[start_node]\n",
+    "        end_pos = node_positions[end_node]\n",
+    "        valid_nodes.append((start_node, end_node))\n",
+    "        plt.plot([start_pos[0], end_pos[0]], [start_pos[1], end_pos[1]], 'k-',linewidth=w,zorder = 2) \n",
+    "\n",
+    "    for node, pos in node_positions.items():\n",
+    "        plt.scatter(pos[0], pos[1], color='green', s=200, marker='o', zorder =3)  \n",
+    "        plt.text(pos[0], pos[1], str(node), fontsize=10, ha='center', va='center')\n",
+    "    \n",
+    "    if layout == 'radial':\n",
+    "        for radius in l_radius:\n",
+    "            plt.plot(radius * np.cos(np.linspace(0, 2*np.pi, 100)), radius * np.sin(np.linspace(0, 2*np.pi, 100)), color='gray', alpha=0.2,zorder = 1)\n",
+    "        \n",
+    "    \n",
+    "    #add the invalid nodes\n",
+    "    for e in all_edges:\n",
+    "        if ((str(e.get_source()), str(e.get_destination())) or (str(e.get_destination()), str(e.get_source()))) not in valid_nodes:\n",
+    "            print(f\"Invalid edge: {e.get_source()}, {e.get_destination()}\")\n",
+    "            start_node = e.get_source()\n",
+    "            end_node = e.get_destination()\n",
+    "\n",
+    "            start_pos = node_positions[start_node]\n",
+    "            end_pos = node_positions[end_node]\n",
+    "            plt.plot([start_pos[0], end_pos[0]], [start_pos[1], end_pos[1]], 'k-',linewidth=0.5,zorder = 1, color=\"red\")\n",
+    "\n",
+    "    plt.axis('off')\n",
+    "    plt.gca().set_facecolor('w')\n",
+    "    plt.savefig('Plots/'+tree+'_'+layout+'_plot.png')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_graph_with_invalid_edges(\"Datasets/LesMiserables.dot\", tree=\"DFS\",  layout=\"radial\")\n",
+    "show_graph_with_invalid_edges(\"Datasets/LesMiserables.dot\", tree=\"BFS\",  layout=\"radial\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -814,7 +919,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
