--- a/Step2.ipynb
+++ b/Step2.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run '/Users/tomascarrilho/Desktop/Faculdade/Data Visualization/Project/Data_Visualization/Step1.ipynb'"
+    "%run \"Step1.ipynb\""
    ]
   },
   {
@@ -674,8 +674,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_graph_with_invalid_edges(\"Datasets/LesMiserables.dot\", tree=\"DFS\",  layout=\"radial\")\n",
-    "show_graph_with_invalid_edges(\"Datasets/LesMiserables.dot\", tree=\"BFS\",  layout=\"radial\")"
+    "#show_graph_with_invalid_edges(\"Datasets/LesMiserables.dot\", tree=\"DFS\",  layout=\"radial\")\n",
+    "#show_graph_with_invalid_edges(\"Datasets/LesMiserables.dot\", tree=\"BFS\",  layout=\"radial\")"
    ]
   },
   {
