--- a/Step5.ipynb
+++ b/Step5.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run '/Users/tomascarrilho/Desktop/Faculdade/Data Visualization/Project/Data_Visualization/Step4.ipynb'"
+    "%run \"Step4.ipynb\""
    ]
   },
   {
@@ -540,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
