--- a/Step6.ipynb
+++ b/Step6.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "    return distances\n",
     "\n",
-    "distances = floyd_warshall(node_list, edge_list, weights)\n",
+    "#distances = floyd_warshall(node_list, edge_list, weights)\n",
     "#print(type(distances))"
    ]
   },
