--- a/Step3.ipynb
+++ b/Step3.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run '/Users/tomascarrilho/Desktop/Faculdade/Data Visualization/Project/Data_Visualization/Step2.ipynb'"
+    "%run \"Step2.ipynb\""
    ]
   },
   {
@@ -128,6 +128,13 @@
    "metadata": {},
    "source": [
     "# Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Les Miserables"
    ]
   },
   {
@@ -392,6 +399,38 @@
     "# for _ in range(4):\n",
     "#     print(force_directed_layout('Datasets/LesMiserables.dot', max_ites=1000,c_spring=6,c_rep=5,, l=3))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#force_directed_layout('Datasets/LesMiserables.dot',plot= 'Yes', max_ites=1000,c_spring=6,c_rep=5, l=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Jazz Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#force_directed_layout('Datasets/JazzNetwork.dot',plot= 'Yes', max_ites=1000,c_spring=2,c_rep=1, l=1)"
+   ]
   }
  ],
  "metadata": {
@@ -410,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
