added axis, and plot for jazz

--- a/Step3.ipynb
+++ b/Step3.ipynb
@@ -429,7 +429,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#force_directed_layout('Datasets/JazzNetwork.dot',plot= 'Yes', max_ites=1000,c_spring=2,c_rep=1, l=1)"
+    "#force_directed_layout('Datasets/JazzNetwork.dot',plot= 'Yes', max_ites=1000,c_spring=2,c_rep=1, l=1)\n",
+    "#force_directed_layout('Datasets/JazzNetwork.dot',plot= 'Yes', max_ites=750,c_spring=2,c_rep=1, l=1)\n",
+    "#force_directed_layout('Datasets/JazzNetwork.dot',plot= 'Yes', max_ites=500,c_spring=2,c_rep=1, l=1)\n",
+    "#force_directed_layout('Datasets/JazzNetwork.dot',plot= 'Yes', max_ites=250,c_spring=2,c_rep=1, l=1)"
    ]
   }
  ],
